FIXED: Align CSS styling to reflect phase 4's intended design

--- a/main.css
+++ b/main.css
@@ -87,6 +87,68 @@ body {
     }
 }
 
+/* Phase 4: Use flexbox to create the boards */
+.boards__container {
+    margin: 0 auto;
+    padding: 32px;
+    max-width: 1400px;
+
+    /* USER GENERATED */
+    display: flex;
+    flex-flow: column wrap;
+}
+.boards__sidebar {
+    background-color: #6c547b;
+    border-radius: 3px;
+    margin: 0 20px 32px 20px;
+    max-height: 130px;
+    max-width: 180px;
+    width: 20%;
+
+    flex-basis: 220px;
+}
+.boards__sidebar-content .title,
+.boards__sidebar-content a {
+    color: white;
+}
+.boards__sidebar-content .description {
+    color: light-blue;
+}
+.boards__group {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    background-color: red;
+}
+.boards__board {
+    background-color: hotpink;
+    border-radius: 3px;
+    box-sizing: border-box;
+    font-weight: bold;
+    height: 100px;
+    margin: 0 8px 16px;
+    max-width: 250px;
+    padding: 4px 8px;
+    position: relative;
+    color: white;
+    width: 25%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+@media screen and (min-width: 750px) and (max-width: 1280px) {
+    .boards__board {
+	width: 33%;
+    }
+}
+@media screen and (max-width: 750px) {
+    .boards__board {
+	width: 100%;
+	max-width: unset;
+    }
+}
+
 /* Supplied CSS follows. */
 .header-nav__group{
     display: flex;
